# nuxt-vue-django-app-backend

./: README.md  db.sqlite3  manage.py  pyproject.toml
backend/: settings.py  urls.py
backend/core/: router.py
backend/core/migrations/: 0001_initial.py
backend/core/models/: __init__.py  choice.py  question.py
backend/core/serializers/: choice.py  question.py
backend/core/views/: question.py
