[tool.poetry]
name = "django-nuxt-project"
version = "1.0.0"
description = "Project using nuxt at front and django in back ass well"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_nuxt_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
django-cors-headers = "^3.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
